<resources>
    <string name="back">Back</string>
    <string name="vigour_medium_font">vivo-font-medium</string>
    <string name="new_version_detect">Checking for new version, please wait ...</string>
    <string name="app_new_version">New version</string>
    <string name="update_now">Update now</string>
    <string name="update_later">Not now</string>
    <string name="exit_app">Exit</string>
    <string name="label_detect_version">Checking for the latest version</string>
    <string name="msg_latest_version">Already the latest version</string>
    <string name="msg_server_error">Server temporarily not responding. Please retry later</string>
    <string name="msg_network_error">Network not connected or not stable</string>
    <string name="perm_title">\"%1$s\" authorization details</string>
    <string name="perm_setting_note">You can change the settings in \"i Manager > App manager\">\"Authority manager\"</string>
    <string name="perm_setting_note_sa">You can change the settings in Security Assistant > App management > Permissions management</string>
    <string name="perm_trust">Trust this App</string>
    <string name="perm_autostart">Allow autostart</string>
    <string name="perm_high_risk">High risk authorization</string>
    <string name="perm_low_risk">Low risk authorization</string>
    <string name="perm_send_sms">Send SMS</string>
    <string name="perm_send_mms">" send MMS"</string>
    <string name="perm_phone_call">Call</string>
    <string name="perm_process_call">Monitor calls</string>
    <string name="perm_read_sms">Access SMS</string>
    <string name="perm_read_mms">Access MMS</string>
    <string name="perm_read_contacts">Access contacts</string>
    <string name="perm_read_call_log">Read call logs</string>
    <string name="perm_write_sms">Write/delete SMS</string>
    <string name="perm_write_mms">Write/delete MMS</string>
    <string name="perm_write_contacts">Write/Delete Contacts</string>
    <string name="perm_write_call_log">Write/Delete call logs</string>
    <string name="perm_get_location">Locating phone</string>
    <string name="perm_get_imei">Access IMEI</string>
    <string name="perm_open_camera">Photo</string>
    <string name="perm_open_video_camera">Video</string>
    <string name="perm_open_record">Record</string>
    <string name="perm_finish">Done</string>
    <string name="perm_starting_app">Starting \"%1$s\"</string>
    <string name="perm_granted">Allow</string>
    <string name="perm_denied">Disallow</string>
    <string name="perm_warning">Always ask</string>
    <string name="perm_request_title">Authorization request</string>
    <string name="perm_request_msg">\"%1$s\" is requesting for %2$s permission(s). Allow it?</string>
    <string name="perm_request_note">Do not remind me again</string>
    <string name="perm_request_hint_msg">You can modify configurations in \"i Manager\" > \"App manager\" > \"Authority manager</string>
    <string name="perm_open_or_close_network">turn on/turn off mobile network</string>
    <string name="perm_open_or_close_wifi">turn on/turn off WLAN</string>
    <string name="perm_open_or_close_bluetooth">turn on/turn off Bluetooth</string>
    <string name="perm_open_or_close_nfc">turn on/turn off NFC</string>
    <string name="perm_hint_note">OK</string>
    <string name="perm_hint_setting">Settings</string>
    <string name="perm_hint_allow_perm">Allow this operation</string>
    <string name="perm_cannot_title">Unable %1$s</string>
    <string name="perm_hint_msg_camera">Please grant permission to \"%1$s\" in \"iManager\" > \"App manager\" > \"Authority manager\" > \"Photo\".</string>
    <string name="perm_hint_msg_video_camera">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Video recording\".</string>
    <string name="perm_hint_msg_record">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Audio recording\".</string>
    <string name="perm_hint_msg_send_sms">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Sending SMS\".</string>
    <string name="perm_hint_msg_send_mms">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Sending MMS\".</string>
    <string name="perm_hint_msg_read_sms">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Accessing SMS\".</string>
    <string name="perm_hint_msg_read_mms">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Accessing MMS\".</string>
    <string name="perm_cannot_use_location">Unable to locate</string>
    <string name="perm_hint_msg_location">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Locating phone\".</string>
    <string name="perm_hint_cannot_title_record">Unable to record audio</string>
    <string name="perm_hint_cannot_title_camera">Unable to take photo</string>
    <string name="perm_hint_cannot_title_video">Unable to record video</string>
    <string name="perm_hint_cannot_title_sendsms">Unable to send SMS message</string>
    <string name="perm_hint_cannot_title_sendmms">Unable to send MMS message</string>
    <string name="perm_hint_cannot_title_readsms">Unable to access SMS message</string>
    <string name="perm_hint_cannot_title_readmms">Unable to access MMS message</string>
    <string name="perm_hint_cannot_title_location">Unable to locate phone</string>
    <string name="perm_hint_cannot_title_callfone">Unable to make a call</string>
    <string name="perm_hint_cannot_title_writesms">Unable to write/delete SMS messages</string>
    <string name="perm_hint_cannot_title_writemms">Unable to write/delete MMS message</string>
    <string name="perm_hint_cannot_title_writecontacts">Unable to write/delete contact</string>
    <string name="perm_hint_cannot_title_writecalllog">Unable to write/delete call log</string>
    <string name="perm_hint_msg_read_callfone">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Place call\".</string>
    <string name="perm_hint_msg_read_writesms">Please grant permission to \"%1$s\" in \"i Manager\" > \"App manager\" > \"Authority manager\" > \"Write/delete SMS messages\".</string>
    <string name="perm_hint_msg_read_writemms">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Write/delete MMS messages\".</string>
    <string name="perm_hint_msg_read_writecontacts">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Write/delete contacts\".</string>
    <string name="perm_hint_msg_read_writecalllog">Please grant permission to \"%1$s\" in \"i Manager\">\"App manager\">\"Authority manager\">\"Write/delete call logs\".</string>
    <string name="perm_use_camera">Use camera</string>
    <string name="perm_read_sms_mms">Access SMS/MMS message(s)</string>
    <string name="perm_write_sms_mms">Edit/Delete SMS/MMS message(s)</string>
    <string name="perm_hint_cancel">Cancel</string>
    <string name="perm_hint_set_granted">Allow</string>
    <string name="perm_hint_keep_denied">Disallow</string>
    <string name="perm_hint_msg_default_one">\"%1$s\"%2$s is blocked. If you are experiencing abnormal performance, set the permissions in \"i Manager\" > \"App manager\" to \"Allow\".</string>
    <string name="perm_hint_msg_default_two">\"%1$s\"%2$s is blocked. If you are experiencing abnormal performance, this can be set in \"i Manager\" > \"App manager\".</string>
    <string name="perm_read_calendar">Access schedules</string>
    <string name="perm_request_hint_msg_30">You can modify configurations in \"Settings\">\"More settings\">\"Permissions management\".</string>
    <string name="perm_hint_msg_default_one_30">\"%1$s\"%2$s is blocked. If you are experiencing abnormal performance, set the permissions in \"Settings\">\"More settings\">\"Permissions management\" to \"Allow\".</string>
    <string name="perm_hint_msg_default_two_30">\"%1$s\"%2$s is blocked. If you are experiencing abnormal performance, this can be set in \"Settings\">\"More settings\">\"Permissions management\".</string>
    <string name="effect_bbe">BBE is on</string>
    <string name="effect_srs">SRS is on</string>
    <string name="effect_none">Effect is off</string>
    <string name="effect_bbe_no_headset">Please insert headset</string>
    <string name="srs_maxv_on">SRS Max-V is on</string>
    <string name="srs_maxv_off">SRS Max-V is off</string>
    <string name="mute_key_locked">Mute Key Locked</string>
    <string name="volume_fm">FM volume</string>
    <string name="app_manager">App Manager</string>
    <string name="per_year">Y</string>
    <string name="per_month">M</string>
    <string name="per_day">D</string>
    <string name="per_hour">H</string>
    <string name="per_min">M</string>
    <string name="bbk_back">Back</string>
    <string name="bbk_complete">Done</string>
    <string name="spring_eve">"New Year's Eve"</string>
    <string name="mother_day">"Mother's Day"</string>
    <string name="farther_day">"Father's Day"</string>
    <string name="newyearday">"New Year's Day"</string>
    <string name="valentineday">"Valentine's Day"</string>
    <string name="womenday">妇女节</string>
    <string name="arborday">植树节</string>
    <string name="foolsday">愚人节</string>
    <string name="tombsweepingday">Qingming Festival</string>
    <string name="earthday">Earth Day</string>
    <string name="laborday">劳动节</string>
    <string name="youthday">青年节</string>
    <string name="childrenday">"Children's Day"</string>
    <string name="environmentday">World Environment Day</string>
    <string name="teacherday">教师节</string>
    <string name="nationalday">国庆节</string>
    <string name="halloween">Halloween</string>
    <string name="halloweeneve">万圣夜</string>
    <string name="christmaseve">Christmas Eve</string>
    <string name="christmasday">Christmas</string>
    <string name="motherday">"Mother's Day"</string>
    <string name="fatherday">"Father's Day"</string>
    <string name="springfestival">春节</string>
    <string name="lanternfestival">元宵节</string>
    <string name="dragonboatfestival">端午节</string>
    <string name="doubleseventhday">七夕节</string>
    <string name="midautumnfestival">中秋节</string>
    <string name="doubleninthfestival">重阳节</string>
    <string name="labariceporridgefestival">腊八节</string>
    <string name="chuxi">"New Year's Eve"</string>
    <string name="lichun">立春</string>
    <string name="dongzhi">冬至</string>
    <string name="armyday">建军节</string>
    <string name="thanksgivingday">Thanksgiving Day</string>
    <string name="vivo_adb_install_confirm_install">Install</string>
    <string name="vivo_adb_install_dialog_app_comes_frome">App downloaded from: Unknown PC tool</string>
    <string name="vivo_adb_install_dialog_app_get_access">It will get access to:</string>
    <string name="vivo_adb_install_confirm_question">Apps obtained from unofficial markets may pose threat to the security of your phone and data. Do you want to install this application?</string>
    <string name="vigour_usb_noti_usb_help">Help</string>
    <string name="vigour_usb_noti_usb_connect">USB connected</string>
    <string name="vigour_usb_noti_usb_connect_info_mtp">Manage files with a computer</string>
    <string name="vigour_usb_noti_usb_function_ptp">Photos</string>
    <string name="vigour_usb_noti_usb_function_mtp">Files</string>
    <string name="vivo_virus_scanning">Security checking</string>
    <string name="vivo_virus_result_Delete">Delete</string>
    <string name="vigour_usb_noti_usb_adb_debug_text">USB debugging disabled</string>
    <string name="vigour_usb_noti_usb_adb_debug_info_text">Tap to view the tutorial on how to enable USB debugging</string>
    <string name="vigour_usb_noti_usb_adb_tips_text">Never remind</string>
</resources>