<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorAlertDialogListItem" android:id="@id/vivo_adb_install_caller" android:paddingTop="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vivo_adb_install_dialog_app_comes_frome" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorAlertDialogListItem" android:id="@id/vivo_adb_install_permissin_desc" android:paddingTop="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vivo_adb_install_dialog_app_get_access" android:layout_below="@id/vivo_adb_install_caller" />
        <Button android:textColor="#ffffffff" android:ellipsize="end" android:layout_gravity="center|right" android:id="@id/vivo_adb_delete_btn" android:background="@drawable/vigour_btn_red" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="31.0dip" android:text="@string/vivo_virus_result_Delete" android:singleLine="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="false" />
    </RelativeLayout>
    <ImageView android:id="@id/vivo_adb_install_divider" android:background="?android:dividerHorizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" />
    <FrameLayout android:id="@id/vivo_adb_install_filler" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <ScrollView android:id="@id/vivo_adb_install_scrollview" android:paddingLeft="4.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/vivo_adb_install_security_settings_list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </ScrollView>
</LinearLayout>