<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/relativeLayout_ID1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginEnd="@dimen/vigour_btn_noti_usb_help_margin_right">
        <FrameLayout android:layout_gravity="center" android:id="@id/frameLayout_left_image" android:layout_width="64.0dip" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:id="@id/sys_noti_usb_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/vigour_stat_sys_data_usb" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayoutID1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="0.0dip" android:layout_toEndOf="@id/frameLayout_left_image">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/vigour_usb_noti_connect_tv" android:textColor="@color/vigour_usb_noti_usb_function_color" android:ellipsize="end" android:id="@id/usb_connect_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vigour_usb_noti_usb_connect" android:singleLine="true" android:layout_toStartOf="@id/usb_help_id" android:layout_alignParentStart="true" />
                <Button android:textSize="@dimen/vigour_usb_noti_usb_help_tv" android:textColor="@color/vigour_usb_noti_usb_help_color" android:ellipsize="end" android:layout_gravity="end" android:id="@id/usb_help_id" android:background="@drawable/vigour_btn_usb_noti_btn_selector" android:layout_width="@dimen/vigour_btn_usb_noti_usb_help_width" android:layout_height="@dimen/vigour_btn_usb_noti_usb_help_height" android:maxWidth="80.0dip" android:text="@string/vigour_usb_noti_usb_help" android:singleLine="true" android:textAllCaps="false" android:paddingStart="1.0dip" android:paddingEnd="1.0dip" android:layout_marginStart="10.0dip" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <TextView android:textSize="@dimen/vigour_usb_noti_connect_info_tv" android:ellipsize="end" android:id="@id/usb_connect_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vigour_usb_noti_usb_connect_info_mtp" android:maxLines="2" android:singleLine="false" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/usb_notification_layout" android:paddingTop="4.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/relativeLayout_ID1" android:layout_marginStart="64.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/linearlayout_photo_id" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <FrameLayout android:id="@id/framelayout1" android:layout_width="@dimen/vigour_btn_usb_noti_usb_btn_frame_width" android:layout_height="@dimen/vigour_btn_usb_noti_usb_btn_frame_height">
                <ImageView android:id="@id/usb_transfer_photo_img" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/vigour_btn_usb_noti_left_btn_normal" android:scaleType="fitXY" />
                <TextView android:textSize="@dimen/vigour_usb_noti_usb_function_tv" android:ellipsize="end" android:layout_gravity="center" android:id="@id/usb_transfer_photo_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vigour_usb_noti_usb_function_ptp" android:singleLine="true" android:layout_marginStart="@dimen/vigour_usb_function_margin" android:layout_marginEnd="@dimen/vigour_usb_function_margin" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/linearlayout_file_id" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <FrameLayout android:id="@id/framelayout2" android:layout_width="@dimen/vigour_btn_usb_noti_usb_btn_frame_width" android:layout_height="@dimen/vigour_btn_usb_noti_usb_btn_frame_height">
                <ImageView android:id="@id/usb_manager_file_img" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/vigour_btn_usb_noti_right_btn_press" android:scaleType="fitXY" />
                <TextView android:textSize="@dimen/vigour_usb_noti_usb_function_tv" android:ellipsize="end" android:layout_gravity="center" android:id="@id/usb_manager_file_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vigour_usb_noti_usb_function_mtp" android:singleLine="true" android:layout_marginStart="@dimen/vigour_usb_function_margin" android:layout_marginEnd="@dimen/vigour_usb_function_margin" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>