<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:vivo="http://schemas.android.com/apk/res/vivo">
    <LinearLayout android:orientation="horizontal" android:id="@id/vivo_adb_install_buttons_panel" android:background="?markupViewBackgroundStyle" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:measureWithLargestChild="true">
        <Button android:textColor="?android:textColorAlertDialogListItem" android:layout_gravity="center" android:id="@id/vivo_adb_install_ok_button" android:paddingTop="4.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/vivo_adb_install_confirm_install" android:layout_weight="0.5" android:textAllCaps="false" android:layout_marginStart="37.0dip" android:layout_marginEnd="18.0dip" style="?vivo:attr/bbkMarkupButtonStyle" />
        <Button android:textColor="?android:textColorAlertDialogListItem" android:layout_gravity="center" android:id="@id/vivo_adb_install_cancel_button" android:paddingTop="4.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="0.5" android:textAllCaps="false" android:layout_marginStart="18.0dip" android:layout_marginEnd="37.0dip" style="?vivo:attr/bbkMarkupButtonStyle" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorAlertDialogListItem" android:id="@id/vivo_adb_install_confirm_question" android:paddingLeft="16.0dip" android:paddingTop="4.0dip" android:paddingRight="16.0dip" android:paddingBottom="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vivo_adb_install_confirm_question" android:layout_above="@id/vivo_adb_install_buttons_panel" />
    <include android:id="@id/vivo_adb_install_app_snippet" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/vigour_adb_install_app_details" />
    <RelativeLayout android:id="@id/virus_scan_zone" android:background="@drawable/vigour_virus_scan_bg_img" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/virus_scan_zone_height" android:layout_below="@id/vivo_adb_install_app_snippet">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ImageView android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/virus_scan_progress" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/virus_scan_text_textSize" android:textColor="#ff00aeff" android:gravity="center_vertical" android:id="@id/virus_scan_text" android:paddingLeft="@dimen/virus_scan_text_paddingLeft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vivo_virus_scanning" />
        </LinearLayout>
    </RelativeLayout>
    <include android:id="@id/vivo_adb_install_confirm_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/vivo_adb_install_confirm_question" android:layout_below="@id/virus_scan_zone" layout="@layout/vigour_adb_install_confirm" />
</RelativeLayout>